# agentgraph

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
dev-scripts/: test-node-scripts.sh
nodes/: agentgraph-app-naming.md  agentgraph-search-and-filter-interaction-decisions.md  archives.md  build-and-runtime-commands.md  conversation-summary-agentgraph-search-and-filter-polish.md  conversation-summary-inline-code-emphasis-fix.md  conversation-summary-node-search-feature.md  conversation-summary-temporal-graph-controls.md  cross-time-link-navigation.md  customer-feedback.md  d3-force-graph-repo-overview.md  demo-node.md  experiments.md  force-simulation-layout.md  graph-camera-follow-behavior.md  graph-interaction-model.md  incident-review.md  inline-code-emphasis-rendering-bug.md  markdown-inline-formatting-order.md  markdown-node-graph-data-pipeline.md  mermaid-diagram-and-sample-code.md  models.md  node-management-scripts.md  node-panel-markdown-rendering.md  node-search-implementation-files.md  node-search-requirements.md  node-search-result-ranking.md  node-search-ui-contract.md  ops.md  pipelines.md  products.md  quality.md  rg-backed-node-search-command.md  signals.md  smart-time-bucket-filtering.md  smooth-force-renderer.md  tauri-node-file-bridge.md  temporal-graph-implementation-files.md  temporal-graph-open-follow-ups.md  temporal-graph-time-filter-requirements.md  (+16 more)
scripts/: add-node.sh  check-node-links.sh  screenshot.mjs  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+20 files in other folders)
