[package]
name = "d3-force-three-renderer"
version = "0.1.0"
description = "A desktop D3 force graph rendered with Three.js"
authors = ["OpenCode"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "d3_force_three_renderer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
